# tree-sitter-apache-avro

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-apache-avro.pc.in
bindings/c/tree_sitter/: tree-sitter-apache-avro.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_apache_avro/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterApacheAvroTests/: TreeSitterApacheAvroTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/: protocol.avdl  schema.avdl
test/corpus/: 01_protocol.txt  01_schema.txt  02_imports.txt  03_imports.txt  04_enumerations.txt  04_fixed.txt  05_fixed.txt  05_records.txt  06_errors.txt  06_records.txt  07_complex_types.txt  07_errors.txt  08_complex_types.txt  08_unions.txt  09_nullable.txt  09_unions.txt  10_rpc_messages.txt  11_comments.txt  11_rpc_messages.txt  12_comments.txt  13_anotations.txt  13_escaping_identifiers.txt  14_anotations.txt  99_complete_example.txt  99_real_life.txt
