[package]
name = "tree-sitter-apache-avro"
description = "Unofficial Apache Avro Language Parser for the IDL Language"
version = "0.1.1"
authors = ["Victor Quiroz <git@victorhqc.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "apache-avro"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/victorhqc/tree-sitter-apache-avro"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
